Add stream processing to UsePerson